--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@angular/router": "~8.2.0",
     "@types/jest": "^24.0.18",
     "nativescript-angular": "~8.2.0",
+    "nativescript-background-http": "^4.2.0",
+    "nativescript-imagepicker": "^7.1.0",
+    "nativescript-statusbar": "^5.0.0",
     "nativescript-theme-core": "~1.0.6",
     "reflect-metadata": "~0.1.12",
     "rxjs": "^6.4.0",
